tools/tests/errors/range_too_large.ki
discard range(10000000000)
